# pynom

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml  result  result-man
src/pynom/: __init__.py  cli.py  display.py  models.py  parser.py
